# Stocks_Analysis_2.0

./: .replit  Procfile  README.md  app.py  embed.html  home.py  pyproject.toml  requirements-deploy.txt  setup.sh
.github/workflows/: main.yml
.streamlit/: config.toml
android_app/: README.md  build.gradle  settings.gradle
android_app/app/: build.gradle
android_app/app/src/main/java/com/stocktrackpro/: MainActivity.kt
android_app/app/src/main/java/com/stocktrackpro/models/: StockData.kt
android_app/app/src/main/res/layout/: activity_main.xml  item_indicator.xml
android_app/app/src/main/res/values/: colors.xml  strings.xml
attached_assets/: Pasted-TypeError-Unable-to-convert-function-return-value-to-a-Python-type-The-signature-was-handle--1743174956574.txt
pages/: 1_Stock_Analysis.py  2_Predictive_Analytics.py  3_User_Feedback.py
tests/: test_basic.py
utils/: analytics.py
